force-app/main/default/objects/CF_Coaching_Session__c/CF_Coaching_Session__c.object-meta.xml
<CustomObject>
    <label>Coaching Session</label>
    <nameField>
        <displayFormat>CS-{0000000}</displayFormat>
        <label>Coaching Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coaching Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>