force-app/main/default/objects/CF_Coaching_Session__c/fields/CF_Agent__c.field-meta.xml
<CustomField>
    <fullName>CF_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Agent</relationshipLabel>
    <relationshipName>Coaching_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>