force-app/main/default/objects/CF_Coaching_Session__c/fields/CF_Call_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>CF_Call_Evaluation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Evaluation</label>
    <referenceTo>CF_Call_Evaluation__c</referenceTo>
    <relationshipLabel>Coaching Sessions</relationshipLabel>
    <relationshipName>Coaching_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>