force-app/main/default/objects/CF_Coaching_Session__c/fields/CF_Coaching_JSON__c.field-meta.xml
<CustomField>
    <fullName>CF_Coaching_JSON__c</fullName>
    <label>Coaching JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>