force-app/main/default/objects/CF_Coaching_Session__c/fields/CF_Coaching_Topic__c.field-meta.xml
<CustomField>
    <fullName>CF_Coaching_Topic__c</fullName>
    <label>Coaching Topic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>