force-app/main/default/objects/CF_Coaching_Session__c/fields/CF_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>CF_Completion_Date__c</fullName>
    <label>Completion Date</label>
    <type>DateTime</type>
</CustomField>