force-app/main/default/objects/CF_Coaching_Session__c/fields/CF_Followup_Date__c.field-meta.xml
<CustomField>
    <fullName>CF_Followup_Date__c</fullName>
    <defaultValue>TODAY() + 14</defaultValue>
    <label>Followup Date</label>
    <type>Date</type>
</CustomField>