force-app/main/default/objects/CF_Coaching_Session__c/fields/CF_Improved_Script__c.field-meta.xml
<CustomField>
    <fullName>CF_Improved_Script__c</fullName>
    <label>Improved Script</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>