force-app/main/default/objects/CF_Coaching_Session__c/fields/CF_Improvement_Area__c.field-meta.xml
<CustomField>
    <fullName>CF_Improvement_Area__c</fullName>
    <label>Improvement Area</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>