force-app/main/default/objects/CF_Coaching_Session__c/fields/CF_Mode__c.field-meta.xml
<CustomField>
    <fullName>CF_Mode__c</fullName>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Cruise Control</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>