force-app/main/default/objects/CF_Coaching_Session__c/fields/CF_Rehearsal_Completed__c.field-meta.xml
<CustomField>
    <fullName>CF_Rehearsal_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rehearsal Completed</label>
    <type>Checkbox</type>
</CustomField>