force-app/main/default/objects/CF_Coaching_Session__c/fields/CF_Rehearsal_Scenario__c.field-meta.xml
<CustomField>
    <fullName>CF_Rehearsal_Scenario__c</fullName>
    <label>Rehearsal Scenario</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>