force-app/main/default/objects/CF_Coaching_Session__c/fields/CF_Status__c.field-meta.xml
<CustomField>
    <fullName>CF_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>