force-app/main/default/objects/CF_Coaching_Session__c/fields/CF_What_Went_Well__c.field-meta.xml
<CustomField>
    <fullName>CF_What_Went_Well__c</fullName>
    <label>What Went Well</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>